# leg_tracker

./: CMakeLists.txt  package.xml
leg_tracker/: CMakeLists.txt  package.xml  setup.py
leg_tracker/include/leg_tracker/: cluster_features.h  laser_processor.h
leg_tracker/launch/: leg_tracker.py
leg_tracker/leg_tracker/: joint_leg_tracker.py
leg_tracker/src/: cluster_features.cpp  detect_leg_clusters.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp
leg_tracker_interfaces/: CMakeLists.txt  package.xml
msg/: Person.msg
scripts/: individual_leg_tracker.py  joint_leg_tracker.py
